--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,10 +7,13 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
-  <title>{{ renderData.title or title or metadata.title }}</title>
+  <title>DC - {{ renderData.title or title or metadata.title }}</title>
   <link rel="stylesheet" href="/styles/base.css">
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
+  <header>
+    <h1 class="home"><a href="{{ '/' | url }}">Darius Cepulis</a></h1>
+  </header>
   {{ content | safe }}
   <script src="/scripts/base.js"></script>
 </body>
