Improved tags and tag pages

--- a/src/index.njk
+++ b/src/index.njk
@@ -23,7 +23,7 @@ description: This is a description that I just wrote.
 
 
   <h2 id="positions">Positions</h2>
-  {% set postslist = collections.position %}
+  {% set postslist = collections.positions %}
   {% include "postslist.njk" %}  
 
   <h2 id="education">Education</h2>
@@ -47,7 +47,7 @@ description: This is a description that I just wrote.
     </ul>
 
   <h2 id="projects">Projects</h2>
-  {% set postslist = collections.project %}
+  {% set postslist = collections.projects %}
   {% include "postslist.njk" %}  
 
   <h2 id="contact">Contact</h2>
