Turned the HTML5 up a notch

--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,11 +1,9 @@
 
 {%- for post in postslist | reverse -%}
-<h3>
-    <a href="{{ post.url }}">{{ post.data.title }}</a>
-    <div class="subtitle">{{ post.data.subtitle }}</div>
-</h3>
-<ul>
-    <li>
+<header>
+    <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
+    <p class="subtitle">{{ post.data.subtitle }}</p>
+    <p class="subtitle">
         <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">
         {% if post.data.dateformat == 'Year' %}
             {{ post.date | dateFormatYear }}
@@ -15,7 +13,7 @@
             {{ post.date | dateFormat }}
         {% endif %}
         </time>
-    </li>
-    <li>{{ post.data.description }}</li>
-</ul>
+    </p>
+</header>
+{{ post.data.description }}
 {%- endfor -%}
