--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 <head>
   <meta charset="utf-8">
+  <meta name="robots" content="noindex" />
 
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + 'has-js';
