--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,19 +1,15 @@
 
 {%- for post in postslist | reverse -%}
-<header>
-    <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
-    <p class="subtitle">{{ post.data.subtitle }}</p>
-    <p class="subtitle">
-        <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">
-        {% if post.data.dateformat == 'Year' %}
-            {{ post.date | dateFormatYear }}
-        {% elif post.data.dateformat == 'MonthYear' %}
-            {{ post.date | dateFormatMonthYear }}
-        {% else %}
-            {{ post.date | dateFormat }}
-        {% endif %}
-        </time>
-    </p>
-</header>
-{{ post.data.description }}
+<section class="postlist-item">
+    <header>
+        <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
+        <p class="subtitle">{{ post.data.subtitle }}</p>
+        <p class="subtitle">
+            <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">
+                {{ post.date | dateFormat(post.data.dateformat) }}
+            </time>
+        </p>
+    </header>
+    <p>{{ post.data.description }}</p>
+</section>
 {%- endfor -%}
