--- a/src/index.njk
+++ b/src/index.njk
@@ -14,16 +14,6 @@ navtitle: Resume
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Side Projects</a></li>
     <li><a href="#contact">Contact</a></li>
-    <li>
-      <label for="theme">Theme: </label>
-      <select id="theme" name="theme">
-        <option value="rad">Rad</option>
-        <option value="paper">Print</option>
-        <option value="editor">Editor</option>
-        <option value="1989" selected>1989</option>
-        <option value="2019">2019</option>
-      </select>
-    </li>
   </ul>
 </nav>
 
@@ -119,6 +109,7 @@ navtitle: Resume
     <section>
       <header>
         <h3>Back-End Web</h3>
+      </header>
         <dl>
           <dt>Libraries<dt>
             <dd>Django, DRF</dt>
@@ -126,38 +117,33 @@ navtitle: Resume
             <dd>Python 3, node.js</dd>
           <dt>Databases</dt>
             <dd>I've got the basics down pretty well.</dd>
-          </dl>
-      </header>
-      <ul>
-      </ul>
+        </dl>
     </section>
 
     <section>
       <header>
         <h3>Cloud Computing, Networking &amp; Infrastructure</h3>
-        <dl>AWS</dl>
-          <dd></dd>
-        <dl>Servers<dl>
-          <dd>Well, I've configured Apache before.</dd>
       </header>
-      <ul>
-      </ul>
+      <dl>
+        <dt>AWS</dt>
+          <dd>...</dd>
+        <dt>Servers<dt>
+          <dd>Well, I've configured Apache before.</dd>
+      </dl>
     </section>
 
     <section>
       <header>
         <h3>I could also hold a conversation about...</h3>
-        <dl>
-          <dt>Code</dt>
-            <dd>Python for Data Science, MATLAB, LaTeX, Swift, C, Assembly (in that order)</dd>
-          <dt>Design &amp; Creative Tools</dt>
-            <dd>UI/UX, Accessibility, Photoshop, Illustrator, Final Cut Pro</dd>
-          <dt>Hardware</dt>
-            <dd>Arduino, Raspberry Pi, BLE, and I used to take Low-Level Computing and Electronics courses</dd>
-        </dl>
       </header>
-      <ul>
-      </ul>
+      <dl>
+        <dt>Code</dt>
+          <dd>Python for Data Science, MATLAB, LaTeX, Swift, C, Assembly (in that order)</dd>
+        <dt>Design &amp; Creative Tools</dt>
+          <dd>UI/UX, Accessibility, Photoshop, Illustrator, Final Cut Pro</dd>
+        <dt>Hardware</dt>
+          <dd>Arduino, Raspberry Pi, BLE, and I used to take Low-Level Computing and Electronics courses</dd>
+      </dl>
     </section>
 
     <section>
