--- a/src/styles/themes/rad.scss
+++ b/src/styles/themes/rad.scss
@@ -1,4 +1,42 @@
 html.rad {
+    background: #000000;
+    background: var(--background);
+    
+    color: #ffffff;
+    color: var(--text);
 
+    font-family: sans-serif;
 
+    font-size: 1.5em;
+
+    :root {
+        --background: #000000;
+        --header1: #888888;
+        --header3: #cccccc;
+        
+        --text: #ffffff;
+        --accent: #000000;
+    }
+    a {
+        color: inherit;
+        text-decoration-color: var(--accent);
+    }
+    h1, h2 {
+        color: #555555;
+        color: var(--header1);
+        margin-block-start: 1rem;
+        margin-block-end: 1rem;
+    }
+    h3, h4, h5, h6 {
+        color: #aaaaaa;
+        color: var(--header3);
+        margin-block-start: 1.33rem;
+        margin-block-end: 1.33rem;
+    }
+    h1 { font-size: 3rem; }
+    h2 { font-size: 2.5rem; }
+    h3 { font-size: 2rem; }
+    h4 { font-size: 1.5rem; }
+    h5 { font-size: 1.25rem; }
+    h6 { font-size: 1rem; }
 }
