New Rad Colors (Triad, JS)

--- a/src/styles/themes/rad.scss
+++ b/src/styles/themes/rad.scss
@@ -1,42 +1,59 @@
 html.rad {
-    background: #000000;
-    background: var(--background);
-    
-    color: #ffffff;
-    color: var(--text);
+    // Begin by defining variable fallback colors
+    $page_bg: #fff;
+    $page_color: #000;
+    $text_bg: #000;
+    $text_color: #fff;
+    $header_bg: #000;
+    $header_color: #fff;
+
+    background-color: $page_bg;
+    background-color: var(--pageBackground, $page_bg);
+    color: $page_color;
+    color: var(--pageColor, $page_color);
 
     font-family: sans-serif;
-
     font-size: 1.5em;
 
-    :root {
-        --background: #000000;
-        --header1: #888888;
-        --header3: #cccccc;
-        
-        --text: #ffffff;
-        --accent: #000000;
-    }
     a {
         color: inherit;
-        text-decoration-color: var(--accent);
+        text-decoration-color: $page_color;
+        text-decoration-color: var(--pageColor, $page_color);
     }
-    h1, h2 {
-        color: #555555;
-        color: var(--header1);
-        margin-block-start: 1rem;
-        margin-block-end: 1rem;
+
+    p, ul, dl {
+        background-color: $text_bg;
+        background-color: var(--textBackground, $text_bg);
+        color: $text_color;
+        color: var(--textColor, $text_color);
+
+        a {
+            text-decoration-color: $header_bg;
+            text-decoration-color: var(--headerBackground, $header_bg);
+        }
     }
-    h3, h4, h5, h6 {
-        color: #aaaaaa;
-        color: var(--header3);
-        margin-block-start: 1.33rem;
-        margin-block-end: 1.33rem;
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: serif;
+        display: inline-block;
+
+        background-color: $header_bg;  // legacy browsers
+        background-color: var(--headerBackground, $header_bg);
+        color: $header_color;
+        color: var(--headerColor, $header_color);
+
+        a {
+            text-decoration-color: $text_bg;
+            text-decoration-color: var(--textBackground, $text_bg);
+        }
     }
-    h1 { font-size: 3rem; }
-    h2 { font-size: 2.5rem; }
-    h3 { font-size: 2rem; }
-    h4 { font-size: 1.5rem; }
-    h5 { font-size: 1.25rem; }
-    h6 { font-size: 1rem; }
+
+    h1 { font-size: 3rem;}
+    h2 { font-size: 2.5rem;}
+    h3 { font-size: 2rem;}
+    h4 { font-size: 1.5rem;}
+    h5 { font-size: 1.25rem;}
+    h6 { font-size: 1rem;}
+    h1, h2 { margin-block-start: 1rem; margin-block-end: 1rem; }
+    h3, h4, h5, h6 { margin-block-start: 1.33rem; margin-block-end: 1.33rem; }
 }
