Very clever embedded YouTube lazy load iframes
https://codesandbox.io/s/youtube-iframe-lazy-load-qdzu6?from-embed

--- a/src/index.njk
+++ b/src/index.njk
@@ -24,8 +24,10 @@ navtitle: Resume
   - Editor
   - 1989
   - 2019
-- Lazy Load Images
-- SEO & Analytics #}
+- Lazy Load Images & Videos
+- SEO & Analytics
+- Breadcrumbs
+#}
 
 <main>
   <section id="about">
